@@ -1,5 +1,11 @@
 2005-04-06  Derek Price  <derek@ximbiot.com>
 
+	* configure.in: Generate maint-aux/Makefile.
+	* Makefile.am (SUBDIRS): Add maint-aux.
+	* maint-aux/Makefile.am, maint-aux/Makefile.in: New files.
+
+2005-04-06  Derek Price  <derek@ximbiot.com>
+
 	* gnulib-modules, gnulib-update, gnulib.txt, srclist.txt: Move these...
 	* maint-aux: ...to this new directory, with minor modifications.
 	* Makefile.am (EXTRA_DIST): Accomodate move of the above files.  Add
